objects/County__c.object
<CustomObject>
    <description>Holds all County related info for states that Accel does gaming business with.</description>
    <fields>
        <fullName>County_Center_Point__c</fullName>
        <description>Geo Point (Centroid) field Split into lat / long</description>
        <inlineHelpText>Geo Point (Centroid) field Split into lat / long</inlineHelpText>
        <label>County Center Point</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Covaid_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Covid Region that this county is associated with. If Not Illinois, Defaults to a bucket Covid Region</inlineHelpText>
        <label>Covid Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Covid</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Counties</relationshipLabel>
        <relationshipName>Counties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covid_Region_Desc__c</fullName>
        <description>A FF to Convid_Region__r.Region_Description__c</description>
        <formula>Covaid_Region__r.Region_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The General Description of the Covid Region</inlineHelpText>
        <label>Covid Region Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS_Text__c</fullName>
        <description>The Federal Information Processing Standard Publication 6-4 (FIPS 6-4) (TEXT Version to eliminate the commas)</description>
        <formula>TEXT(FIPS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Federal Information Processing Standard Publication 6-4 (FIPS 6-4). This helps to uniquely ID a county with state being the first 2 digits and county the last three</inlineHelpText>
        <label>FIPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <inlineHelpText>The numeric version of FIPS (SFDC Will insert commas in number fields so you might want to go with the text version (labeled just FIPS) for display.</inlineHelpText>
        <label>FIPS (Numeric)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gaming_Shut_Down__c</fullName>
        <description>Gaming Mitigation Status as determined by the counties covid region.</description>
        <formula>Covaid_Region__r.Gaming_Shut_Down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gaming Mitigation Status as determined by the counties covid region.</inlineHelpText>
        <label>Gaming Shut Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Shape_Boundary__c</fullName>
        <description>The polygon coordinates of the county.</description>
        <inlineHelpText>The polygon coordinates of the county.</inlineHelpText>
        <label>Geo Shape Boundary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of accounts within this county. (DLRS Maintained do not modify)</description>
        <inlineHelpText>Total number of accounts within this county.</inlineHelpText>
        <label>Total Accounts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>ALL_TN_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>TN</value>
        </filters>
        <label>All TN Counties</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_GA_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>GA</value>
        </filters>
        <label>All GA Counties</label>
    </listViews>
    <listViews>
        <fullName>All_IL_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>All IL Counties</label>
    </listViews>
    <listViews>
        <fullName>All_MO_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MO</value>
        </filters>
        <label>All MO Counties</label>
    </listViews>
    <listViews>
        <fullName>All_NC_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <label>All NC Counties</label>
    </listViews>
    <listViews>
        <fullName>All_NE_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <label>All NE Counties</label>
    </listViews>
    <listViews>
        <fullName>All_NY_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <label>All NY Counties</label>
    </listViews>
    <listViews>
        <fullName>All_PA_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>PA</value>
        </filters>
        <label>All PA Counties</label>
    </listViews>
    <listViews>
        <fullName>All_SC_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Covaid_Region__c</columns>
        <columns>Covid_Region_Desc__c</columns>
        <columns>FIPS_Text__c</columns>
        <columns>Gaming_Shut_Down__c</columns>
        <columns>Total_Accounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>SC</value>
        </filters>
        <label>All SC Counties</label>
    </listViews>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>